api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert -f docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      labels:
        io.kompose.network/products-default: "true"
        io.kompose.service: api
    spec:
      containers:
        - env:
            - name: RDS_DB_NAME
              value: products
            - name: RDS_HOSTNAME
              value: db
            - name: RDS_PASSWORD
              value: dummyproduct
            - name: RDS_PORT
              value: "3306"
            - name: RDS_USERNAME
              value: product-user
          image: tlquick/products:0.0.1-SNAPSHOT
          name: product-api
          ports:
            - containerPort: 8080
      restartPolicy: Always
